<resources>
    <string name="app_name">Hello Shared Prefs</string>

    <!-- Button label for blue button -->
    <string name="blue_button">Blue</string>

    <!-- Button label for green button -->
    <string name="green_button">Green</string>

    <!-- Button label for red button -->
    <string name="red_button">Red</string>

    <!-- Button label for black button -->
    <string name="black_button">Black</string>

    <!-- Default string for count TextView -->
    <string name="default_count">0</string>

    <!-- Button label for Count button -->
    <string name="count_button">Count</string>

    <!-- Button label for Reset button -->
    <string name="reset_button">Reset</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="choose_the_option">Choose the option:</string>
    <string name="delete_color">Delete Color</string>
    <string name="delete_count">Delete Count</string>
    <string name="delete_both">Delete Both</string>
    <string name="choose_reset_preferences_or_save_it">Choose Reset preferences or Save it:</string>
    <string name="data_cleared">Data Cleared</string>
    <string name="saved">Saved</string>
</resources>
