<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/choose_the_option"/>

    <RadioGroup
        android:id="@+id/preference_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/delete_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_color" />

        <RadioButton
            android:id="@+id/delete_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_count" />

        <RadioButton
            android:id="@+id/delete_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_both" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/choose_reset_preferences_or_save_it"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <Button
        android:id="@+id/save_button"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/save"
        android:onClick="savePreferences"/>

    <Button
        android:id="@+id/reset_button"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/reset"
        android:onClick="resetPreferences"/>

    </LinearLayout>

</LinearLayout>